k8ymls/api-test-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-test-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-secret: "default/ingress-mtls"
spec:
  tls:
  - hosts:
    - finomialapi-test.finomial.com
    secretName: ingress-ssl
  rules:
  - host: finomialapi-test.finomial.com
    http:
      paths:
      - backend:
          serviceName: aks-helloworld
          servicePort: 80
        path: /(.*)
      - backend:
          serviceName: ingress-demo
          servicePort: 80
        path: /hello-world-two(/|$)(.*)
